<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity"
  >
  <ImageView
    android:id="@+id/map_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="centerCrop"
    android:src="@drawable/map"
    />
  <com.compscieddy.newclusterprototype.GradientSpotlightView
    android:id="@+id/gradient_spotlight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0"
    />
  <FrameLayout
    android:id="@+id/cluster_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    >
    <LinearLayout
      android:id="@+id/pog_and_name_label_container"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="52dp"
      android:orientation="vertical"
      >
      <LinearLayout
        android:id="@+id/pog_horizontal_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-10dp"
        android:orientation="horizontal"
        >
        <ImageView
          android:layout_width="60dp"
          android:layout_height="60dp"
          android:src="@drawable/face1"
          />
        <ImageView
          android:layout_width="60dp"
          android:layout_height="60dp"
          android:layout_marginStart="-24dp"
          android:src="@drawable/face2"
          />
      </LinearLayout>
      <LinearLayout
        android:id="@+id/name_label_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/name_label_background"
        android:orientation="horizontal"
        android:padding="7dp"
        >
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Sneha +1"
          android:textColor="@color/black"
          android:textStyle="bold"
          />
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="7dp"
          android:text="5h"
          android:textColor="@color/wtb_35"
          />
      </LinearLayout>
    </LinearLayout>
    <FrameLayout
      android:id="@+id/note_preview"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      >
      <View
        android:id="@+id/bottom_nub"
        android:layout_width="30dp"
        android:layout_height="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bottom_nub_background"
        />
      <FrameLayout
        android:id="@+id/note_bubble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/note_bubble_background"
        android:paddingStart="24dp"
        android:paddingTop="12dp"
        android:paddingEnd="24dp"
        android:paddingBottom="12dp"
        >
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="👋"
          android:textSize="16sp"
          />
      </FrameLayout>
      <View
        android:id="@+id/bottom_bubble"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bottom_bubble_background"
        />
    </FrameLayout>
  </FrameLayout>

  <FrameLayout
    android:id="@+id/new_cluster_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0"
    >

    <!-- Pog 1 -->
    <FrameLayout
      android:id="@+id/pog_container1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      >
      <LinearLayout
        android:id="@+id/pog_and_name_label_container1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:orientation="vertical"
        >
        <ImageView
          android:layout_width="60dp"
          android:layout_height="60dp"
          android:layout_marginTop="-10dp"
          android:src="@drawable/face1"
          />
        <LinearLayout
          android:id="@+id/name_label1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:background="@drawable/name_label_background"
          android:orientation="horizontal"
          android:padding="7dp"
          >
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name1"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/ago1"
            android:textColor="@color/wtb_35"
            />
        </LinearLayout>
      </LinearLayout>
      <FrameLayout
        android:id="@+id/note1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >
        <View
          android:layout_width="30dp"
          android:layout_height="15dp"
          android:layout_marginStart="5dp"
          android:layout_marginTop="20dp"
          android:background="@drawable/bottom_nub_background"
          />
        <FrameLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/note_bubble_background"
          android:paddingStart="24dp"
          android:paddingTop="12dp"
          android:paddingEnd="24dp"
          android:paddingBottom="12dp"
          >
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
        </FrameLayout>
        <View
          android:layout_width="10dp"
          android:layout_height="10dp"
          android:layout_marginStart="18dp"
          android:layout_marginTop="50dp"
          android:background="@drawable/bottom_bubble_background"
          />
      </FrameLayout>
    </FrameLayout>

    <!-- Pog 2 -->
    <FrameLayout
      android:id="@+id/pog_container2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      >
      <LinearLayout
        android:id="@+id/pog_and_name_label_container2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:orientation="vertical"
        >
        <ImageView
          android:layout_width="60dp"
          android:layout_height="60dp"
          android:layout_marginTop="-10dp"
          android:src="@drawable/face2"
          />
        <LinearLayout
          android:id="@+id/name_label2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:background="@drawable/name_label_background"
          android:orientation="horizontal"
          android:padding="7dp"
          >
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name2"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/ago2"
            android:textColor="@color/wtb_35"
            />
        </LinearLayout>
      </LinearLayout>
      <FrameLayout
        android:id="@+id/note2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >
        <View
          android:layout_width="30dp"
          android:layout_height="15dp"
          android:layout_marginStart="5dp"
          android:layout_marginTop="20dp"
          android:background="@drawable/bottom_nub_background"
          />
        <FrameLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/note_bubble_background"
          android:paddingStart="24dp"
          android:paddingTop="12dp"
          android:paddingEnd="24dp"
          android:paddingBottom="12dp"
          >
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text2"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
        </FrameLayout>
        <View
          android:layout_width="10dp"
          android:layout_height="10dp"
          android:layout_marginStart="18dp"
          android:layout_marginTop="50dp"
          android:background="@drawable/bottom_bubble_background"
          />
      </FrameLayout>
    </FrameLayout>

    <!-- Pog 3 -->
    <FrameLayout
      android:id="@+id/pog_container3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      >
      <LinearLayout
        android:id="@+id/pog_and_name_label_container3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:orientation="vertical"
        >
        <ImageView
          android:layout_width="60dp"
          android:layout_height="60dp"
          android:layout_marginTop="-10dp"
          android:src="@drawable/face3"
          />
        <LinearLayout
          android:id="@+id/name_label3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:background="@drawable/name_label_background"
          android:orientation="horizontal"
          android:padding="7dp"
          >
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name3"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/ago3"
            android:textColor="@color/wtb_35"
            />
        </LinearLayout>
      </LinearLayout>
      <FrameLayout
        android:id="@+id/note3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >
        <View
          android:layout_width="30dp"
          android:layout_height="15dp"
          android:layout_marginStart="5dp"
          android:layout_marginTop="20dp"
          android:background="@drawable/bottom_nub_background"
          />
        <FrameLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/note_bubble_background"
          android:paddingStart="24dp"
          android:paddingTop="12dp"
          android:paddingEnd="24dp"
          android:paddingBottom="12dp"
          >
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text3"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
        </FrameLayout>
        <View
          android:layout_width="10dp"
          android:layout_height="10dp"
          android:layout_marginStart="18dp"
          android:layout_marginTop="50dp"
          android:background="@drawable/bottom_bubble_background"
          />
      </FrameLayout>
    </FrameLayout>

    <!-- Pog 4 -->
    <FrameLayout
      android:id="@+id/pog_container4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      >
      <LinearLayout
        android:id="@+id/pog_and_name_label_container4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:orientation="vertical"
        >
        <ImageView
          android:layout_width="60dp"
          android:layout_height="60dp"
          android:layout_marginTop="-10dp"
          android:src="@drawable/face4"
          />
        <LinearLayout
          android:id="@+id/name_label4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:background="@drawable/name_label_background"
          android:orientation="horizontal"
          android:padding="7dp"
          >
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name4"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/ago4"
            android:textColor="@color/wtb_35"
            />
        </LinearLayout>
      </LinearLayout>
      <FrameLayout
        android:id="@+id/note4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >
        <View
          android:layout_width="30dp"
          android:layout_height="15dp"
          android:layout_marginStart="5dp"
          android:layout_marginTop="20dp"
          android:background="@drawable/bottom_nub_background"
          />
        <FrameLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/note_bubble_background"
          android:paddingStart="24dp"
          android:paddingTop="12dp"
          android:paddingEnd="24dp"
          android:paddingBottom="12dp"
          >
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text4"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
        </FrameLayout>
        <View
          android:layout_width="10dp"
          android:layout_height="10dp"
          android:layout_marginStart="18dp"
          android:layout_marginTop="50dp"
          android:background="@drawable/bottom_bubble_background"
          />
      </FrameLayout>
    </FrameLayout>

    <!-- Pog 5 -->
    <FrameLayout
      android:id="@+id/pog_container5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      >
      <LinearLayout
        android:id="@+id/pog_and_name_label_container5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:orientation="vertical"
        >
        <ImageView
          android:layout_width="60dp"
          android:layout_height="60dp"
          android:layout_marginTop="-10dp"
          android:src="@drawable/face5"
          />
        <LinearLayout
          android:id="@+id/name_label5"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:background="@drawable/name_label_background"
          android:orientation="horizontal"
          android:padding="7dp"
          >
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name5"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/ago5"
            android:textColor="@color/wtb_35"
            />
        </LinearLayout>
      </LinearLayout>
      <FrameLayout
        android:id="@+id/note5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >
        <View
          android:layout_width="30dp"
          android:layout_height="15dp"
          android:layout_marginStart="5dp"
          android:layout_marginTop="20dp"
          android:background="@drawable/bottom_nub_background"
          />
        <FrameLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/note_bubble_background"
          android:paddingStart="24dp"
          android:paddingTop="12dp"
          android:paddingEnd="24dp"
          android:paddingBottom="12dp"
          >
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text5"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
        </FrameLayout>
        <View
          android:layout_width="10dp"
          android:layout_height="10dp"
          android:layout_marginStart="18dp"
          android:layout_marginTop="50dp"
          android:background="@drawable/bottom_bubble_background"
          />
      </FrameLayout>
    </FrameLayout>

    <TextView
      android:id="@+id/neighborhood_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:layout_gravity="center"
      android:padding="16dp"
      android:rotation="-8"
      android:shadowColor="#80000000"
      android:shadowDx="2"
      android:shadowDy="2"
      android:shadowRadius="3"
      android:text="Hayes Valley"
      android:textColor="@color/black"
      android:textSize="21sp"
      android:textStyle="bold"
      android:translationX="-5dp"
      android:translationY="-20dp"
      />

  </FrameLayout>

</FrameLayout>






















